discussion/kv_engine/154999/154999_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Refactor: Move the executor in ep-engine to executor

This is the initial patch in the series to start using the executor
from ep-engine in the core.

This patch just moves the code to implement the executor from
engines/ep/src to executor and update the incluce statement
in all of the affected files.

The executor is still created by the first call to ep-engine
and the core doesn't really know its there.

Change-Id: I2f206de893ac4a78009a6d775304e405f3aa4ce5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-08 11:06:10.000000000
Message: 
Uploaded patch set 8: Patch Set 7 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 13:20:00.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8185/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/executor/cb3_executorpool.h b/executor/cb3_executorpool.h
index 8fef5ac9e..1a0d2f217 100644
--- a/executor/cb3_executorpool.h
+++ b/executor/cb3_executorpool.h
@@ -63,8 +63,8 @@
 #include &quot;executorpool.h&quot;
 #include &quot;task_type.h&quot;
 #include &quot;taskable.h&quot;
-#include &lt;platform/syncobject.h&gt;
 #include &lt;memcached/thread_pool_config.h&gt;
+#include &lt;platform/syncobject.h&gt;
 #include &lt;map&gt;
 #include &lt;set&gt;
 #include &lt;vector&gt;
diff --git a/executor/folly_executorpool.cc b/executor/folly_executorpool.cc
index a47fd6ad5..13c724cee 100644
--- a/executor/folly_executorpool.cc
+++ b/executor/folly_executorpool.cc
@@ -153,7 +153,7 @@ struct FollyExecutorPool::TaskProxy : public folly::HHWheelTimer::Callback {
         scheduledOnCpuPool = true;
 
         // Perform work on the appropriate CPU pool.
-        cpuPool.add([&amp;proxy = *this] {
+        cpuPool.add([&amp; proxy = *this] {
             Expects(proxy.task.get());
 
             EP_LOG_TRACE(&quot;FollyExecutorPool: Run task \&quot;{}\&quot; id {}&quot;,
@@ -897,7 +897,7 @@ std::vector&lt;ExTask&gt; FollyExecutorPool::unregisterTaskable(Taskable&amp; taskable,
 
     // Finally, remove entry for the unregistered Taskable.
     eventBase-&gt;runInEventBaseThreadAndWait(
-            [&amp;state = this-&gt;state, &amp;taskable]() mutable {
+            [&amp; state = this-&gt;state, &amp;taskable]() mutable {
                 state-&gt;removeTaskable(taskable);
             });
 

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8185/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9587/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/access_scanner_bench.cc:18:10: error: "mock/mock_synchronous_ep_engine.h" file not found [clang-diagnostic-error]
#include <mock/mock_synchronous_ep_engine.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/executor_bench.cc:19:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/kvstore_bench.cc:26:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:19:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9587/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/access_scanner_bench.cc:18:10:
error: "mock/mock_synchronous_ep_engine.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9587/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36543/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36543/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11164/ : FAILURE

Compile error at [2021-06-08T11:55:42.539Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11164/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11312/ : FAILURE

Compile error at [2021-06-08T12:16:58.497Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11312/ )

http://cv.jenkins.couchbase.com/job/ming-test2/132/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31228/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10235/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11584/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19167/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
